<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="speaker_can_speak_when_new_sms"
        android:defaultValue="true"
        android:summary="@string/settings_sms_enable_speaker"
        android:title="@string/settings_sms_enable_speaker_title" />
    <SwitchPreference
        android:key="speaker-sms_can_read_just_sms_summary"
        android:dependency="speaker_can_speak_when_new_sms"
        android:defaultValue="true"
        android:summary="@string/settings_sms_summary"
        android:title="@string/settings_sms_summary_title" />
    <EditTextPreference
        android:key="speaker-sms_summary_defined_model"
        android:dependency="speaker-sms_can_read_just_sms_summary"
        android:capitalize="words"
        android:defaultValue="@string/settings_sms_summary_default_model"
        android:inputType="textCapWords"
        android:maxLines="5"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/settings_sms_summary_model_title" />
    <EditTextPreference
        android:key="speaker-sms_content_defined_model"
        android:dependency="speaker_can_speak_when_new_sms"
        android:capitalize="words"
        android:defaultValue="@string/settings_sms_body_default_model"
        android:inputType="textCapWords"
        android:maxLines="5"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/settings_sms_body_model_title" />


    <SwitchPreference
        android:key="smsresponder_can_reply_on_new_sms"
        android:defaultValue="false"
        android:summary="@string/settings_sms_enable_responder"
        android:title="@string/settings_sms_enable_responder_title" />
    <EditTextPreference
        android:key="smsrespondermessage"
        android:dependency="smsresponder_can_reply_on_new_sms"
        android:capitalize="words"
        android:defaultValue="@string/settings_sms_responder"
        android:inputType="textCapWords"
        android:maxLines="10"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/settings_sms_responder_title" />
    <ListPreference
        android:defaultValue="1"
        android:dependency="smsresponder_can_reply_on_new_sms"
        android:entries="@array/pref_operator_values_label"
        android:entryValues="@array/pref_operator_values"
        android:key="sms_reply_sim"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_first_sim_operator" />
</PreferenceScreen>
