<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="speaker_can_speak_when_new_call"
        android:defaultValue="true"
        android:summary="@string/settings_call_enable_speaker"
        android:title="@string/settings_call_enable_speaker_title" />
    <EditTextPreference
        android:key="speaker-call_defined_model"
        android:dependency="speaker_can_speak_when_new_call"
        android:capitalize="words"
        android:defaultValue="@string/settings_call_summary_default_model"
        android:inputType="textCapWords"
        android:maxLines="5"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/settings_call_summary_model_title" />
</PreferenceScreen>
