<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.it.mougang.gasmyr.takecare.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_add_alert_black_24dp"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="com.it.mougang.gasmyr.takecare.SettingsActivity$BirthdayPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_birthday" />
    <header
        android:fragment="com.it.mougang.gasmyr.takecare.SettingsActivity$SMSPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_sms" />
    <header
        android:fragment="com.it.mougang.gasmyr.takecare.SettingsActivity$CALLPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_call" />
    <header
        android:fragment="com.it.mougang.gasmyr.takecare.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_contacts_sync" />

</preference-headers>
