<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="birthday_speaker_notification_status"
        android:summary="@string/pref_enable_birthday_description"
        android:title="@string/pref_enable_birthday_notification" />
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_birthday_notification_values_label"
        android:entryValues="@array/pref_birthday_notification_values"
        android:key="birthday_periods"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_number_of_before_ntification" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="birthday-can_send_birthday_message"
        android:summary="Auto send birthday message"
        android:title="Send birthday on deadline" />
</PreferenceScreen>
